--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@octokit/rest": "^22.0.1",
     "axios": "^1.13.2",
+    "better-sqlite3": "^12.6.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1"
