--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,17 @@
 {
   "name": "leetsync-backend",
-  "version": "1.0.0",
   "type": "module",
-  "private": true,
+  "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
-    "dev": "node server.js",
     "start": "node server.js"
   },
   "dependencies": {
-    "@octokit/rest": "^22.0.1",
-    "axios": "^1.13.2",
-    "better-sqlite3": "^12.6.0",
-    "dotenv": "^17.2.3",
-    "express": "^4.21.2",
-    "cors": "^2.8.5"
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
+    "simple-git": "^3.22.0"
   }
 }
